<resources>
    <string name="app_name_release">BillaboxNG</string>
    <string name="app_name_test">BillaboxNG Test</string>
    <string name="app_name_debug">BillaboxNG Dev</string>
    <string name="base_api_url">https://billabong.learnindialearn.in/api/</string>
    <string name="base_web_url">https://billabong.learnindialearn.in/</string>
    <string name="base_api_url_debug">https://billabong-dev.learnindialearn.in/api/</string>
    <string name="base_web_url_debug">https://billabong-dev.learnindialearn.in/</string>
    <string name="base_api_url_test">https://billabong-test.learnindialearn.in/api/</string>
    <string name="base_web_url_test">https://billabong-test.learnindialearn.in/</string>
    <string name="mind_spark_x_api_key">zS72YNPKoA9gK6Z6j9Msj4VO1p2SxUnx21Kwuz4P</string>
    <string name="mind_spark_base_url">https://www.mindspark.in/api/</string>
    <string name="base_url_wikiHow">https://www.wikihow.com/</string>
    <string name="base_url_freadom_dev">https://euro-web-dev.getfreadom.com/euro-login/</string>
    <string name="base_url_freadom_prod">https://euro-web.getfreadom.com/euro-login/</string>
    <string name="base_url_lightsail">https://s2m-euro-reader.lightsailed.com/Reader/index.html?jwtToken=</string>
    <string name="base_url_logiqids">https://api.logiqids.com/</string>
    <string name="search_provider_authority">in.securelearning.lil.android.app.billabongstudent.provider.SearchSuggestionProvider</string>
    <string name="search_provider_authority_debug">in.securelearning.lil.android.app.billabongstudent.debug.provider.SearchSuggestionProvider</string>
    <string name="search_provider_authority_test">in.securelearning.lil.android.app.billabongstudent.demo.provider.SearchSuggestionProvider</string>
    <string name="file_provider_authority">in.securelearning.lil.android.app.billabongstudent.provider.FileProvider</string>
    <string name="file_provider_authority_debug">in.securelearning.lil.android.app.billabongstudent.debug.provider.FileProvider</string>
    <string name="file_provider_authority_test">in.securelearning.lil.android.app.billabongstudent.demo.provider.FileProvider</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_language">Language</string>
    <string name="pref_title_about">About</string>
    <string name="pref_title_help">Help</string>
    <string-array name="pref_example_list_language">
        <item>English</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
    </string-array>
    <string name="pref_header_data_sync">Data sync</string>
    <string name="pref_header_logout">Logout</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="setting_notification_sound">Sound</string>
    <string name="setting_notification_course">Courses</string>
    <string name="setting_notification_lnetwork">Learning Network</string>
    <string name="setting_notification_assignment">Assignment</string>
    <string name="setting_bus_arriving">Bus arriving </string>
    <string name="setting_bus_has_arrive">Bus has arrived </string>
    <string name="pref_title_wifi">Download only on WiFi</string>
    <string name="pref_title_wifi_on_lnetwork">Auto download Learning Network media</string>
    <string name="notifications_language">notifications_language</string>
    <string name="notifications_help">notifications_help</string>
    <string name="notifications_about">notifications_about</string>
    <string name="notifications_sound">notifications_sound</string>
    <string name="notifications_ringtone">notifications_ringtone</string>
    <string name="notifications_vibrate">notifications_vibrate</string>
    <string name="notifications_course">notifications_course</string>
    <string name="notifications_lnetwork">notifications_lnetwork</string>
    <string name="notifications_assignment">notifications_assignment</string>
    <string name="notifications_bus_arriving">notifications_bus_arriving</string>
    <string name="notifications_bus_has_arriving">notifications_bus_has_arriving</string>
    <string name="notifications_wifi">notifications_wifi</string>
    <string name="notifications_wifi_on_lnetwork">notifications_wifi_on_lnetwork</string>
    <string name="next">Next</string>
    <string name="skip">SKIP</string>
    <string name="quickRecap">Let\'s have a quick recap!</string>
    <string name="labelAndroid">android</string>
    <string name="labelNoOfSessions">No. of Sessions</string>
    <string name="labelNoOfSections">No. of Sections</string>
    <string name="messageUnableToGetData">Unable to get data</string>
    <string name="messageUnableToSendData">Unable to send data</string>
    <string name="messageNoDataFound">No data found</string>
    <string name="messagePracticeAvailable">No practice available</string>
    <string name="no_subject_available">No subject available</string>
    <string name="no_recap_for_today">No recap for today</string>
    <string name="label_learn">Know &amp; Inquire</string>
    <string name="label_reinforce">Explore &amp; Explain</string>
    <string name="label_practice">Analyze &amp; Apply</string>
    <string name="label_apply">Reflect</string>
    <string name="chapters">Chapters</string>
    <string name="chapter">Chapter</string>
    <string name="go_back">Go Back</string>
    <string name="homework">Homework</string>
    <string name="homeworkTime">It\'s time for homework now.</string>
    <string name="messageNewUpdateIsAvailable">A new update is available to download.\nPlease update the app for better experience.</string>
    <string name="labelUpdateAvailable">Update Available</string>
    <string name="labelUpdate">Update</string>
    <string name="labelColon">:</string>
    <string name="labelAadhaarNumber">Aadhaar Number</string>
    <string name="labelClassGroup">Class Group</string>
    <string name="labelEnrollmentCode">Enrollment Code</string>
    <string name="labelDateOfBirth">Date Of Birth</string>
    <string name="labelBloodGroup">Blood Group</string>
    <string name="labelAddress">Address</string>
    <string name="labelInterest">Interest</string>
    <string name="labelFatherDetails">Father Details</string>
    <string name="labelName">Name</string>
    <string name="labelMobile">Mobile</string>
    <string name="labelEmail">Email</string>
    <string name="labelEmailOrEnrollmentNumber">Email/Enrollment number</string>
    <string name="labelEnrollmentNumber">Enrollment number</string>
    <string name="labelMotherDetails">Mother Details</string>
    <string name="labelTotalRewards">Total Rewards</string>
    <string name="labelTotalEuros">Total Billabucks</string>
    <string name="pass">pass</string>
    <string name="fail">fail</string>
    <string name="messageGettingNextQuestion">Getting Next Question</string>
    <string name="messageMSEndTopic">Congratulations your practice on this topic submitted.\nPlease Go Back and try practice for another topic.</string>
    <string name="messageNoMoreQuestion">No more questions available for this topic.\nPlease Go Back and try practice for another topic.</string>
    <string name="messageNoQuestionForTopic">No question available for this topic.\nPlease Go Back and try practice for another topic.</string>
    <string name="messagePracticeMotivation">Oops! You can\'t continue the practice, since all the answers are wrong until now.\nPlease learn and try again.</string>
    <string name="messagePracticeConfigurationNotAvailable">Oops! Configuration not available for the practice, please contact to administrator.</string>
    <string name="practice_force_close">Something went wrong, please close the practice and try again.</string>
    <string name="messageQuizConfigurationNotAvailable">Oops! Configuration not available for the quiz, please contact to administrator.</string>
    <string name="total_trophies">Total Trophies</string>
    <string name="total_badges">Total Badges</string>
    <string name="daily_efforts_min">Daily Efforts (min)</string>
    <string name="total_hrs">Total (hrs)</string>
    <string name="daily_efforts">Daily Efforts</string>
    <string name="daily_avg">Daily Avg. Efforts</string>
    <string name="total">Total</string>
    <string name="total_efforts">Total Efforts</string>
    <string name="total_hh_mm">Total (HH:MM)</string>
    <string name="reading">Reading</string>
    <string name="min">(min)</string>
    <string name="progress">Progress</string>
    <string name="single_correct">Single Correct</string>
    <string name="multiple_correct">Multiple Correct</string>
    <string name="fill_the_blanks">Fill the blanks</string>
    <string name="match_the_following">Match the following</string>
    <string name="fill_the_dropdown">Fill the dropdown</string>
    <string name="select_correct_answer">Select the correct answer</string>
    <string name="dropdown">Dropdown</string>
    <string name="please_fill_all_the_blanks">Please fill all the blanks</string>
    <string name="please_match_all_entities">Please match all entities with placeholder</string>
    <string name="please_fill_all_the_dropdown">Please fill all the dropdown</string>
    <string name="quiz_force_close">Something went wrong, please close the quiz and try again.</string>
    <string name="efforts_based_on_time_spent">Efforts Based On Time Spent</string>
    <string name="performance_based_on_assessments">Performance Based On Assessments</string>
    <string name="progress_based_on_coverage">Progress Based On Coverage</string>
    <string name="time_spent">Time Spent</string>
    <string name="labelGetStarted">Get Started</string>
    <string name="are_you_sure">Are you sure ?</string>
    <string name="logout_message">Would you like to logout from App ?</string>
    <string name="logout">Logout</string>
    <string name="logout_from_app">Logout from app</string>
    <string name="message_multiple_login">You are already logged in from another device.\nAre you sure you want to logout from previous device ?</string>
    <string name="message_invalidate_other_login_success">You have been logged out from your previous device.</string>
    <string name="mindSparkNoUnitMessageHome">No question available for this topic, please try practice on another topic by clicking on \'More\'</string>
    <string name="mindSparkNoUnitMessageList">No question available for this topic, please try practice on another topic.</string>
    <string name="error_loading_groups">Failed to load groups</string>
    <string name="message_loading_groups">Loading groups…</string>
    <string name="error_loading_profile">Failed to load your Profile</string>
    <string name="labelClear">Clear</string>
    <string name="labelSearch">Search</string>
    <string name="string_filter">Filter</string>
    <string name="done">Done</string>
    <string name="browse">Browse</string>
    <string name="label_create_quiz">Create Quiz</string>
    <string name="favorites">Favorites</string>
    <string name="submitted_homework">Submitted Homework</string>
    <string name="request_otp">Request OTP</string>
    <string name="please_enter_otp_sent_to">Please enter the OTP sent to</string>
    <string name="did_not_receive_otp">Didn’t receive OTP?</string>
    <string name="resend">RESEND</string>
    <string name="enter_your_enrollment_number">Enter your enrollment number</string>
    <string name="request_otp_message">Tap REQUEST OTP to verify your enrollment number with our database.\nAn SMS will be sent to verify your number.</string>
    <string name="verifying_your_enrollment_number">Verifying your enrollment number…</string>
    <string name="verify_otp">Verify OTP</string>
</resources>