<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <item
        android:id="@+id/actionSearch"
        android:icon="@drawable/action_search_w"
        android:orderInCategory="97"
        android:title="@string/abc_search_hint"
        android:visible="false"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />

    <item
        android:id="@+id/action_bookmark"
        android:icon="@drawable/action_favorite_w"
        android:orderInCategory="98"
        android:title="@string/favorites"
        android:visible="false"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_browse"
        android:icon="@drawable/course_explorer"
        android:orderInCategory="99"
        android:title="@string/browse"
        android:visible="false"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_create_assignment"
        android:icon="@drawable/action_add_w"
        android:orderInCategory="100"
        android:title="@string/label_create_quiz"
        android:visible="false"
        app:showAsAction="always" />


    <item
        android:id="@+id/action_done"
        android:icon="@drawable/action_done_square_multiple_dark"
        android:orderInCategory="101"
        android:title="@string/submitted_homework"
        android:visible="false"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_filter"
        android:icon="@drawable/filter_white"
        android:orderInCategory="102"
        android:title="@string/string_filter"
        android:visible="false"
        app:showAsAction="always" />


</menu>