<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <ListPreference
        android:defaultValue="0"
        android:entries="@array/pref_example_list_language"
        android:entryValues="@array/pref_example_list_values"
        android:icon="@drawable/ic_language_black_24dp"
        android:key="notifications_language"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_language"/>

    <PreferenceScreen
        android:icon="@drawable/ic_contact_mail_black_24dp"
        android:summary="What we can help you"
        android:selectAllOnFocus="true"
        android:title="@string/pref_title_help">
                   
        <intent
            android:key="notifications_help"
            android:action="android.intent.action.VIEW"
            android:data="@string/api_url"/>
               
    </PreferenceScreen>

    <PreferenceScreen
        android:icon="@drawable/ic_supervisor_account_black_24dp"
        android:summary="Know about us"
        android:selectAllOnFocus="true"
        android:title="@string/pref_title_about">
                   
        <intent
            android:key="notifications_about"
            android:action="android.intent.action.VIEW"
            android:data="@string/api_url"/>
               
    </PreferenceScreen>

</PreferenceScreen>

