<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- A 'parent' preference, which enables/disables child preferences (below)
         when checked/unchecked. -->
    <SwitchPreference
        android:defaultValue="true"
        android:key="notifications_sound"
        android:title="@string/setting_notification_sound"/>

    <!-- Allows the user to choose a ringtone in the 'notification' category. -->
    <!-- NOTE: This preference will be enabled only when the icon_checkbox_multiple above is checked. -->
    <!-- NOTE: RingtonePreference's summary should be set to its name by the activity code. -->
    <!--<RingtonePreference-->
        <!--android:defaultValue="content://settings/system/notification_sound"-->
        <!--android:key="notifications_ringtone"-->
        <!--android:ringtoneType="notification"-->
        <!--android:title="@string/pref_title_ringtone"/>-->

    <!-- NOTE: This preference will be enabled only when the icon_checkbox_multiple above is checked. -->
    <!--<SwitchPreference-->
        <!--android:defaultValue="true"-->
        <!--android:key="notifications_vibrate"-->
        <!--android:title="@string/pref_title_vibrate"/>-->

    <SwitchPreference
        android:defaultValue="true"
        android:key="notifications_course"
        android:title="@string/setting_notification_course"/>

    <SwitchPreference
        android:defaultValue="true"
        android:key="notifications_lnetwork"
        android:title="@string/setting_notification_lnetwork"/>

    <SwitchPreference
        android:defaultValue="true"
        android:key="notifications_assignment"
        android:title="@string/setting_notification_assignment"/>

    <!--<ListPreference-->
        <!--android:defaultValue="1"-->
        <!--android:entries="@array/pref_list_bus_arriving"-->
        <!--android:entryValues="@array/pref_list_bus_arriving_values"-->
        <!--android:key="notifications_bus_arriving"-->
        <!--android:negativeButtonText="@null"-->
        <!--android:positiveButtonText="@null"-->
        <!--android:title="@string/setting_bus_arriving"/>-->

    <!--<ListPreference-->
        <!--android:defaultValue="1"-->
        <!--android:entries="@array/pref_list_bus_has_arriving"-->
        <!--android:entryValues="@array/pref_list_bus_arriving_has_values"-->
        <!--android:key="notifications_bus_has_arriving"-->
        <!--android:negativeButtonText="@null"-->
        <!--android:positiveButtonText="@null"-->
        <!--android:title="@string/setting_bus_has_arrive"/>-->

</PreferenceScreen>
