<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/value_16dp"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <!--layout request OTP-->
        <LinearLayout
            android:id="@+id/layoutRequestOTP"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="visible">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputLayoutLoginPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/editTextLoginPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_your_enrollment_number"
                    android:inputType="number"
                    android:maxLines="1"
                    android:textColor="@color/colorGreyDark"
                    android:textSize="@dimen/textSize_16sp"
                    android:theme="@style/themeEditTextGrey" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="@dimen/value_8dp"
                android:gravity="center_horizontal"
                android:text="@string/request_otp_message" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonRequestOTP"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/chipButtonHeight_36dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/value_4dp"
                android:layout_marginBottom="@dimen/value_4dp"
                android:background="@drawable/gradient_chip"
                android:paddingStart="@dimen/value_12dp"
                android:paddingEnd="@dimen/value_12dp"
                android:text="@string/request_otp"
                android:textColor="@color/colorWhite" />

        </LinearLayout>

        <!--layout progress-->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/layoutProgress"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textViewProgress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/verifying_your_enrollment_number"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/colorBlack" />

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/value_16dp" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <!--layout submit OTP-->
        <LinearLayout
            android:id="@+id/layoutSubmitOTP"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone">

            <in.securelearning.lil.android.base.widget.TextViewCustom
                android:id="@+id/textViewOTPTextLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/value_4dp"
                android:gravity="center_horizontal"
                android:text="@string/please_enter_otp_sent_to"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/colorBlack" />

            <in.securelearning.lil.android.base.widget.TextViewCustom
                android:id="@+id/textViewOTPMobileNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/value_4dp"
                android:gravity="center_horizontal"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                tools:text="9476564511" />

            <in.securelearning.lil.android.base.widget.TextViewCustom
                android:id="@+id/textViewOTPTimer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/value_12dp"
                android:textColor="@color/colorRed"
                android:textSize="@dimen/textSize_16sp"
                android:visibility="gone" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/value_16dp"
                android:layout_marginBottom="@dimen/value_16dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/otpView1"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="@dimen/value_16dp"
                    android:background="@drawable/background_rectangle_box_white_elevated"
                    android:gravity="center"
                    android:inputType="number"
                    android:maxLength="1"
                    android:textColor="@color/colorGreyDark" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/otpView2"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="@dimen/value_16dp"
                    android:background="@drawable/background_rectangle_box_white_elevated"
                    android:gravity="center"
                    android:inputType="number"
                    android:maxLength="1"
                    android:textColor="@color/colorGreyDark" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/otpView3"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="@dimen/value_16dp"
                    android:background="@drawable/background_rectangle_box_white_elevated"
                    android:gravity="center"
                    android:inputType="number"
                    android:maxLength="1"
                    android:textColor="@color/colorGreyDark" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/otpView4"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="@dimen/value_16dp"
                    android:background="@drawable/background_rectangle_box_white_elevated"
                    android:gravity="center"
                    android:inputType="number"
                    android:maxLength="1"
                    android:textColor="@color/colorGreyDark" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonVerifyOTP"
                android:layout_width="148dp"
                android:layout_height="@dimen/chipButtonHeight_36dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/value_4dp"
                android:background="@drawable/gradient_chip"
                android:text="@string/verify_otp"
                android:textColor="@color/colorWhite" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/value_8dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <in.securelearning.lil.android.base.widget.TextViewCustom
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/did_not_receive_otp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/buttonResend"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/resend"
                    android:textColor="@color/colorPrimary" />


            </LinearLayout>


        </LinearLayout>

    </androidx.appcompat.widget.LinearLayoutCompat>


</layout>