<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground">

        <LinearLayout
            android:id="@+id/rootView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <!--Title, Clear button-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:orientation="horizontal">

                <!--Title-->
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/textViewTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    android:layout_weight="1"
                    android:textStyle="bold"
                    android:maxLines="1"
                    android:padding="@dimen/value_12dp"
                    android:textColor="@color/colorGreyDark"/>

                <!--Clear Filter-->
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/buttonClearFilter"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:text="@string/labelClear"
                    android:textAllCaps="false"
                    android:textColor="@color/colorGreyDark"
                    android:textSize="@dimen/textSize_16sp"
                    android:visibility="gone"/>

                <!--done button-->
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/buttonDone"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:text="@string/done"
                    android:textAllCaps="false"
                    android:textColor="@color/colorGreyDark"
                    android:textSize="@dimen/textSize_16sp"
                    android:visibility="gone"/>

            </LinearLayout>

            <!--Search editText-->
            <EditText
                android:id="@+id/editTextSearch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/search"
                android:drawablePadding="@dimen/value_8dp"
                android:hint="@string/labelSearch"
                android:padding="@dimen/value_12dp"
                android:singleLine="true"
                android:textColor="@color/colorGreyDark"
                android:textSize="@dimen/textSize_16sp"
                android:visibility="gone"/>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/textViewNoResult"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:maxLines="1"
                    android:paddingTop="80dp"
                    android:paddingBottom="80dp"
                    android:text="@string/messageNoDataFound"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                    android:textColor="@color/colorGreyDark"
                    android:visibility="gone"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:divider="#00000000"
                    android:scrollbars="none"/>

            </FrameLayout>

        </LinearLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>